Created function to set the active navbar element. Got the navbar working for all three elements to update the main window div.

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav">
-            <li class="active" id="Home"><a style="cursor: pointer">Home</a></li>
-            <li id="Projects"><a style="cursor: pointer">Projects</a></li>
+            <li class="active" id="Home"><a onclick="home()" style="cursor: pointer">Home</a></li>
+            <li id="Projects"><a onclick="projects()" style="cursor: pointer">Projects</a></li>
             <li id="About"><a onclick="about()" style="cursor: pointer">About</a></li>
           </ul>
         </div>
