--- a/index.html
+++ b/index.html
@@ -41,19 +41,29 @@
     <div class="container-fluid text-center">
       <div class="row content">
         <div class="col-sm-2 sidenav">
-          <p><a href="#">Item 1</a></p>
-          <p><a href="#">Item 2</a></p>
+          <div class="well">
+              <p><a href="#">Resume</a></p>
+          </div>
+          <div class="well">
+              <p><a href="#">item 2</a></p>
+          </div>
         </div>
-        <div class="col-sm-8 text-left" style="text-align: center;" id="main_window">
-          <h1>Matthew Hubbard</h1>
-          <img src="email_profile_pic.jpg" alt="Matthew R. Hubbard" style="width:40%;height:40%;">
+        <div class="col-md-2 text-left" style="text-align: center;" id="self_pic">
+            <img src="email_profile_pic.jpg" alt="Matthew R. Hubbard" style="width:100%;height:100%;">
+        </div>
+        <div class="col-md-6 text-left" style="text-align: center;" id="main_window">
+          <h1 class="display-1">Matthew Hubbard's Portfolio</h1>
+          <p>Welcome to my portfolio site. Check out my about page and what projects I've done.</p>
         </div>
         <div class="col-sm-2 sidenav">
           <div class="well">
-          <p><a href="#" target="_blank">Item 1</a></p>
+              <p><a href="https://www.linkedin.com/in/matthew-r-hubbard">LinkedIn</a></p>
           </div>
           <div class="well">
-            <p><a href="#" target="_blank">Item 2</a></p>
+            <p><a href="https://github.com/Matthew-Hubbard">GitHub</a></p>
+          </div>
+          <div class="well">
+            <p><a href="https://www.facebook.com/matthew.hubbard.1671">FaceBook</a></p>
           </div>
         </div>
       </div>
