Fleshed out my css. Chose a background image. Used fonts through google fonts. Changed the well links background and font. Changed the Projects header to a marker font. Linked resume.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> <!-- bootstrap css -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> <!-- jquery -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> <!-- bootstrap js -->
+
+    <!-- fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Oswald|Permanent+Marker|Slabo+27px&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="style.css"> <!-- import the .css -->
     <script type="text/javascript" src="site.js"></script>
   </head>
@@ -26,7 +30,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">MRH</a>
+          <a class="navbar-brand" href="#" onclick="home()">MRH</a>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav">
@@ -42,28 +46,25 @@
       <div class="row content">
         <div class="col-sm-2 sidenav">
           <div class="well">
-              <p><a href="#">Resume</a></p>
-          </div>
-          <div class="well">
-              <p><a href="#">item 2</a></p>
+              <p><a class= "sidebar" href="#" target="_blank">Resume</a></p>
           </div>
         </div>
         <div class="col-md-2 text-left" style="text-align: center;" id="self_pic">
             <img src="email_profile_pic.jpg" alt="Matthew R. Hubbard" style="width:100%;height:100%;">
         </div>
-        <div class="col-md-6 text-left" style="text-align: center;" id="main_window">
+        <div class="col-md-6 text-left mainDiv" style="text-align: center;" id="mainWindow">
           <h1 class="display-1">Matthew Hubbard's Portfolio</h1>
           <p>Welcome to my portfolio site. Check out my about page and what projects I've done.</p>
         </div>
         <div class="col-sm-2 sidenav">
           <div class="well">
-              <p><a href="https://www.linkedin.com/in/matthew-r-hubbard">LinkedIn</a></p>
+              <p><a class="sidebar" href="https://www.linkedin.com/in/matthew-r-hubbard" target="_blank">LinkedIn</a></p>
           </div>
           <div class="well">
-            <p><a href="https://github.com/Matthew-Hubbard">GitHub</a></p>
+            <p><a class= "sidebar" href="https://github.com/Matthew-Hubbard" target="_blank">GitHub</a></p>
           </div>
           <div class="well">
-            <p><a href="https://www.facebook.com/matthew.hubbard.1671">FaceBook</a></p>
+            <p><a  class= "sidebar" href="https://www.facebook.com/matthew.hubbard.1671" target="_blank">FaceBook</a></p>
           </div>
         </div>
       </div>
