--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
               <p><a class= "sidebar" href="Hubbard_Matthew_Resume_5-11-18.pdf" target="_blank">Resume</a></p>
           </div>
         </div>
+        <div class="col-md-2 text-left" style="text-align: center;" id="self_pic">
+          <img src="email_profile_pic.jpg" alt="Matthew R. Hubbard" style="width:100%;height:100%;">
+        </div>
         <div class="col-md-6 text-left mainDiv" style="text-align: center;" id="mainWindow">
           <h1 class="display-1">Matthew Hubbard's Portfolio</h1>
           <p>Welcome to my portfolio site. Check out my about page and what projects I've done.</p>
-        </div>
-        <div class="col-md-2 text-left" style="text-align: center;" id="self_pic">
-          <img src="email_profile_pic.jpg" alt="Matthew R. Hubbard" style="width:100%;height:100%;">
         </div>
         <div class="col-sm-2 sidenav">
           <div class="well">
@@ -70,7 +70,9 @@
       </div>
     </div>
 
-<!--  Add footer with email and resume-->
+    <footer class="container-fluid text-center" style="background-color: transparent;">
+      <p>Matthew R. Hubbard - mrh8@pdx.edu</p>
+    </footer>
 
   </body>
 </html>
